--- a/IR_Kwon/css/main_style.css
+++ b/IR_Kwon/css/main_style.css
@@ -156,8 +156,28 @@ main section .inner {
   box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.04);
 }
 
+.value_drivers .container .area .item .card_before {
+  opacity: 1;
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  transition: width 0.8s ease-in-out;
+}
+
+.value_drivers .container .area .item.active .card_before {
+  width: 232px;
+}
+
 .value_drivers .container .area .item .card_after {
   background: var(--subRed2-200);
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  transition: opacity 0.8s ease-in-out;
+}
+
+.value_drivers .container .area .item .card_after.active {
+  opacity: 1;
 }
 
 .value_drivers .container .area .item .card .label {
@@ -188,22 +208,20 @@ main section .inner {
   text-align: left;
   font: var(--font-1920-title-B-40);
   text-transform: uppercase;
-  position: relative;
+  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex: 1;
   width: 20px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  z-index: 3;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-.value_drivers .container .area .item_2 .arrow {
-  align-self: stretch;
-  width: 20px;
-}
-
-.value_drivers .container .area .item_3 .arrow {
-  flex-shrink: 0;
-  width: 20px;
+.value_drivers .container .area .item .arrow.active {
+  opacity: 1;
 }
 
 .value_drivers .container .description {
