--- a/lee/css/style.css
+++ b/lee/css/style.css
@@ -1,18 +1,192 @@
 
-.signature-works{
-  background-color: #0D031C; 
-/*    padding: 0 0 130; */
+/* .signature-works{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; 
+  background-color: #ffffff; 
+  padding-top: 474px;
+/*    padding: 0 0 130; 
+} */
+
+
+@function pxToRem($pixel) {
+  @return ($pixel / 16) * 1rem;
+}
+
+:root {
+  --color-black: hsla(0, 0%, 12%, 100%);
+  --color-white: hsla(0, 0%, 100%, 100%);
+  --color-purple: hsla(278, 100%, 75%, 100%);
+}
+
+body {
+  background-color: #0D031C;
+  color: var(--color-white);
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+}
+
+main {
+  margin: 0;
+}
+
+.heading {
+  font-size: clamp(3.125rem, 3.464vw + 2.229rem, 5rem);
+  line-height: clamp(4.688rem, 3.349vw + 3.821rem, 6.5rem);
+  margin: pxToRem(100) 0;
+  text-align: center;
+  opacity: 0.1;
+  position: absolute;
+  left: 50%;
+  margin: 0;
+  top: 50%;
+  transform: translate3d(-50%, -50%, -2000px);
+  white-space: nowrap;
+  font-size: 300px;
+   line-height: 1.2;
+}
+
+.zoom-container {
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+  perspective: 100svh;
+  width: 100vw;
+  margin-top: 350px;
+}
+
+.zoom-item {
+  position: absolute;
+  transform-origin: center center;
+
+  &[data-layer="3"] {
+    opacity: 0.6;
+    z-index: 3;
+  }
+
+  &[data-layer="2"] {
+    opacity: 0.4;
+    z-index: 2;
+  }
+
+  &[data-layer="1"] {
+    opacity: 0.2;
+    z-index: 1;
+  }
+
+  &:nth-child(2) {
+    left: 15vw;
+    top: 21%;
+    width: 11.5vw;
+  }
+
+  &:nth-child(3) {
+    left: 29%;
+    top: 15%;
+    width: 9.2vw;
+  }
+
+  &:nth-child(4) {
+    left: 36%;
+    top: 3%;
+    width: 11.5vw;
+  }
+
+  &:nth-child(5) {
+    right: 30%;
+    top: 11%;
+    width: 7.6vw;
+  }
+
+  &:nth-child(6) {
+    bottom: auto;
+    right: 7%;
+    top: 28%;
+    width: 13.2vw;
+  }
+
+  &:nth-child(7) {
+    bottom: 32%;
+    right: 3.5%;
+    width: 4.7vw;
+  }
+
+  &:nth-child(8) {
+    bottom: 13.5%;
+    left: 16%;
+    width: 10.5vw;
+  }
+
+  &:nth-child(9) {
+    bottom: 24%;
+    left: 29%;
+    width: 5.9vw;
+  }
+
+  &:nth-child(10) {
+    bottom: 46%;
+    left: 7.5%;
+    top: auto;
+    width: 5.2vw;
+  }
+
+  &:nth-child(11) {
+    bottom: 5.5%;
+    right: 15%;
+    width: 15vw;
+  }
+
+  &:nth-child(12) {
+    bottom: 10.5%;
+    left: auto;
+    right: 38%;
+    width: 8.3vw;
+  }
+
+  &:nth-child(13) {
+    right: 4%;
+    top: 5%;
+    width: 6.1vw;
+  }
+
+  &:not(.heading) {
+    max-height: 300px;
+    max-width: 300px;
+  }
+
+  img {
+    width: 100%;
+    transition: transform 0.3s ease;
+  }
+}
+
+.container {
 }
 
 
-.tit_eng {
-font-size: 56px;
-/* font-family: ""; */
-color: #BFA473;
-letter-spacing : 1px; /* 글자 자간 */
-margin-left: 200px;
-margin-top: 180px;
-}
+
+
+/* .tit_eng {
+  color: var(--maincolor-main-1000, #bfa473);
+  text-align: left;
+  font-family: var(--1920-56-font-family, "Assistant-Bold", sans-serif);
+  font-size: var(--1920-56-font-size, 56px);
+  line-height: var(--1920-56-line-height, 130%);
+  font-weight: var(--1920-56-font-weight, 700);
+  text-transform: uppercase;
+  position: relative;
+  align-self: stretch;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  margin: 0;
+  right: 80px;
+} */
+
+
+
+
 
 
 .sw_img {
@@ -48,14 +222,22 @@ cursor:pointer;
 }
 
 .on-alr{
-font-size: 56px;
-/* font-family: ""; */
-font-weight: 500; /* 폰트굵기 */
-color: #BFA473;
-letter-spacing : 1px; /* 글자 자간 */
-margin-left: 200px;
-margin-top: 180px;
-margin-bottom: 40px; 
+  color: var(--maincolor-main-1000, #bfa473);
+  text-align: left;
+  font-family: var(--1920-56-font-family, "Assistant-Bold", sans-serif);
+  font-size: var(--1920-56-font-size, 56px);
+  line-height: var(--1920-56-line-height, 130%);
+  font-weight: var(--1920-56-font-weight, 700);
+  text-transform: uppercase;
+  position: relative;
+  align-self: stretch;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 0;
+  margin-top: 200px; /* 온에어 위에간격 */
+  margin-bottom: 40px; /* 온에어 아래간격 */
+  margin-left: 210px;
 }
 
 .button-group {
@@ -152,47 +334,52 @@ margin-bottom: 40px;
   display: flex;
   justify-content: space-between;/* 5개 박스 사이 자동 간격 */
   margin: 0 200px; /* 양쪽 200px 여백 */
-  margin-bottom: 90px;
+  margin-bottom: 120px;
   flex-wrap: nowrap;  /* 한 줄로 유지 */
+}
+.poster-section1-titel{
+  color: #948484;
+  font-weight: 600;
+  font-size: 25px; 
+  margin-top: 23px; /* 위쪽 간격 */
+  text-align: center; 
 }
 .poster-box1 img {
   width: 269px;
   height: 380px;
   border-radius: 5px;
   filter: brightness(0.9); /* 이미지어둡게 조절 */
+  cursor:pointer;
 }
 .poster-box2 img {
   width: 269px;
   height: 380px;
   border-radius: 5px;
   filter: brightness(0.9); /* 이미지어둡게 조절 */
+  cursor:pointer;
 }
 .poster-box3 img {
   width: 269px;
   height: 380px;
   border-radius: 5px;
   filter: brightness(0.9); /* 이미지어둡게 조절 */
+  cursor:pointer;
 }
 .poster-box4 img {
   width: 269px;
   height: 380px;
   border-radius: 5px;
   filter: brightness(0.9); /* 이미지어둡게 조절 */
+  cursor:pointer;
 }
 .poster-box5 img {
   width: 269px;
   height: 380px;
   border-radius: 5px;
   filter: brightness(0.9); /* 이미지어둡게 조절 */
+  cursor:pointer;
 }
 
-.poster-section1-titel{
-  color: #948484;
-  font-weight: 600;
-  font-size: 20px; 
-   margin-top: 10px; /* 위쪽 간격 */
-/*   text-align: center;  */
-}
 
 /* -------------------------------
    포스터 3D 인터랙티브 효과 망한거 복구해
