--- a/css/main_media.css
+++ b/css/main_media.css
@@ -9,29 +9,13 @@
     header .inner {
         width: 95%;
     }
-
-    header nav .right {
-        width: auto;
-        display: flex;
-        align-items: center;
-        gap: 20px;
-    }
-
-    header nav .right .lang {
-        height: 34px;
-    }
-
-    header nav .right .ham {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
 }
 
 @media screen and (max-width:1023px) {
     header {
         padding-top: 0;
         height: 213px;
+        position: static;
         /*     height: auto;
         display: flex;
         flex-direction: row;
@@ -70,14 +54,15 @@
         border: 0;
         position: static;
         padding: 30px 70px;
+        border-radius: 0;
     }
 
     header nav.mobile {
-        position: fixed;
+        position: absolute;
         right: 0;
         top: 0;
         width: 50%;
-        height: 100vh;
+        height: auto;
         z-index: 11;
         flex-direction: column;
     }
@@ -93,20 +78,20 @@
         justify-content: flex-start;
         border-bottom: 1px solid #4a4259;
         order: 2;
+        padding-top: 30px;
     }
-
-
 
     header nav.mobile ul.gnb>li {
         width: 100%;
         height: auto;
         /* background: #ccc; */
+        padding-bottom: 30px;
     }
 
     header nav.mobile ul.gnb>li a {
         width: 100%;
         height: 40px;
-        padding-bottom: 10px;
+        padding-bottom: 20px;
     }
 
     header nav ul.gnb>li.on>a,
@@ -114,6 +99,7 @@
         font-size: 24px;
         font-weight: 500;
         color: var(--MainColor);
+        text-decoration: underline;
     }
 
     header nav.mobile ul.gnb>li>ul.sub {
@@ -123,7 +109,9 @@
         transform: translateX(0);
         border-radius: 0;
         border: 0;
+        border-bottom: 1px solid #4F485A;
         display: block;
+        padding-bottom: 30px;
     }
 
     header nav.mobile ul.gnb>li:nth-child(1)>ul.sub,
@@ -138,7 +126,7 @@
 
 
     header nav.mobile ul.gnb>li>ul.sub li {
-        padding-bottom: 0;
+        padding-bottom: 10px;
     }
 
     header nav ul.gnb>li>ul.sub li:hover,
@@ -148,8 +136,24 @@
         color: var(--MainColor);
     }
 
+    
     header nav .right {
+        width: 470px;
+        display: flex;
+        justify-content: end;
+        gap: 20px;
         order: 1;
+        padding: 0 70px;
+    }
+
+    header nav .right .lang {
+        height: 34px;
+    }
+
+    header nav .right .ham {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
