--- a/intro_kim/css/introkim_style.css
+++ b/intro_kim/css/introkim_style.css
@@ -1,40 +1,50 @@
 @charset "UTF-8";
 
-* {
+/* * {
     margin: 0 auto;
     box-sizing: border-box;
     scroll-behavior: smooth;
-}
+} */
 
 section {
-    max-width: 1920px;
-    width: 1920px;
+    /*     max-width: 1920px;
+    width: 1920px; */
     padding: 150px;
 }
 
 .main_cach {
-    width: 1920px;
-    height: 100%;
-    padding: 150% 0 0 150%;
+    box-sizing: content-box;
+    width: 100%;
+    height: 100vh;
+    padding: 250px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
-.main_cach .inner {
-    width: 1520px;
+.main_cach .swiper {
+    width: 100%;
+    /* width: 1520px; */
 }
 
-.main_cach .inner .img_roll {
+.main_cach .img_roll div {
+    width: 344px;
+    opacity: .6;
+}
+
+.main_cach .img_roll div img {
     width: 344px;
     height: 344px;
     border-radius: 50%;
-    display: flex;
-    justify-content: space-between;
-    margin-right: 64px;
-    overflow: hidden;
     object-fit: cover;
 }
 
-.main_cach .inner .img_roll img {
-    position: relative;
-    left: 0;
-    top: 0;
+.main_cach .txt {
+    position: absolute;
+    width: 690px;
+    height: 304px;
+    background: var(--subRed2-900);
+    z-index: 100;
 }
