--- a/moon/css/pg-style.css
+++ b/moon/css/pg-style.css
@@ -56,10 +56,10 @@ section * {
 .running-contest .info {
   background: rgba(245, 245, 245, 0.6);
   border-radius: 32px;
-  padding: 42px 32px 42px 32px;
+  padding: 48px 52px;
   display: flex;
   flex-direction: column;
-  gap: 38px;
+  gap: 65px;
   align-items: center;
   justify-content: flex-start;
   flex-shrink: 0;
@@ -71,7 +71,7 @@ section * {
   padding: 4px 0px 4px 0px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 23px;
   align-items: center;
   justify-content: flex-start;
   flex-shrink: 0;
@@ -151,7 +151,7 @@ section * {
   position: relative;
 }
 
-.running-contest .subtitle {
+.running-contest article .subtitle {
   color: var(--Bcolor);
   text-align: left;
   font-family: "Assistant-Bold", sans-serif;
@@ -161,9 +161,9 @@ section * {
   position: relative;
 }
 
-.running-contest .article ul {}
+.running-contest article ul {}
 
-.running-contest .article li {
+.running-contest article li {
   color: var(--Bcolor);
   text-align: left;
   font-family: "Assistant-Regular", sans-serif;
