--- a/back/css/MainBeck_style.css
+++ b/back/css/MainBeck_style.css
@@ -21,8 +21,13 @@ body {
     margin-left: -300px;
     margin-top: -400px;
     transform-style: preserve-3d;
-    animation: ani linear 50s infinite;
-    /* animation-play-state: paused; */
+    transition: transform 1s ease-in-out;
+    will-change: transform;
+    pointer-events: none; /* circle 자체는 클릭 불가 */
+}
+
+.circlebody #circle.paused {
+    transition: none;
 }
 
 @keyframes ani {
@@ -42,11 +47,18 @@ body {
     left: 0;
     top: 0;
     backface-visibility: hidden;
+    cursor: pointer; /* 모든 face에 pointer 커서 */
+    pointer-events: auto; /* article은 클릭 가능 */
+}
+
+.circlebody #circle article.active {
+    z-index: 10; /* 정면 근처 face를 앞으로 */
 }
 
 .circlebody>#circle article .poster {
     width: 100%;
     height: 100%;
+    cursor: pointer; /* poster에도 pointer 커서 */
 }
 
 .circlebody>#circle article .poster>img {
@@ -59,6 +71,7 @@ body {
     opacity: .7;
     overflow: hidden;
     transition: .5s;
+    cursor: pointer;
 }
 
 .circlebody>#circle article .poster>img:hover {
