--- a/intro_kim/css/introkim_style.css
+++ b/intro_kim/css/introkim_style.css
@@ -9,7 +9,11 @@
 section {
     /*     max-width: 1920px;
     width: 1920px; */
-    padding: 150px;
+    padding: 150px 0;
+}
+
+body {
+    background-color: #F5F5F5;
 }
 
 .main_cach {
@@ -39,12 +43,55 @@ section {
     height: 344px;
     border-radius: 50%;
     object-fit: cover;
+    opacity: .3;
 }
 
 .main_cach .txt {
+    display: contents;
+    flex-direction: column;
     position: absolute;
-    width: 690px;
-    height: 304px;
-    background: var(--subRed2-900);
+    top: 200px;
+    left: 0;
     z-index: 100;
+}
+
+.main_cach .txt p.head_copy {
+    font-size: 70px;
+    color: var(--Wcolor);
+    font-weight: 700;
+    text-align: center;
+    margin: 0 10px;
+    padding: 10px;
+}
+
+.main_cach .txt p.head_copy.first {
+    display: inline-block;
+    background: var(--subRed2-900);
+}
+
+.main_cach .txt p.head_copy.second {
+    display: inline-block;
+    background: var(--subRed2-900);
+}
+
+.main_cach .txt em {
+    font-size: 30px;
+    font-weight: 400;
+    text-align: center;
+    margin-top: 24px;
+
+}
+
+h3.tit {
+    font-size: 56px;
+    font-weight: 700;
+    width: 1520px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.info-g .inner {
+    width: 1520px;
+    max-width: 100%;
 }
