--- a/lee/css/style.css
+++ b/lee/css/style.css
@@ -1,4 +1,13 @@
 
+
+body {
+  background-color: #0D031C;
+  color: var(--color-white);
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+}
+
+
 /* .signature-works{
   display: flex;
   flex-direction: column;
@@ -9,7 +18,7 @@
 /*    padding: 0 0 130; 
 } */
 
-
+/* 
 @function pxToRem($pixel) {
   @return ($pixel / 16) * 1rem;
 }
@@ -164,7 +173,7 @@ main {
 .container {
 }
 
-
+ */
 
 
 /* .tit_eng {
