--- a/lee/css/style.css
+++ b/lee/css/style.css
@@ -43,7 +43,28 @@ main {
   margin: 0;
 }
 
-.heading {
+.main_visual {
+  position: relative;
+  width: 100%;
+}
+
+.text_reveal_section {
+  min-height: 100vh;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
+
+.opacity_reveal {
+  font-size: clamp(2rem, 5vw, 4.375rem);
+  text-align: center;
+  width: 60%;
+  line-height: 1.5;
+}
+
+.main_heading {
   font-size: clamp(3.125rem, 3.464vw + 2.229rem, 5rem);
   line-height: clamp(4.688rem, 3.349vw + 3.821rem, 6.5rem);
   margin: pxToRem(100) 0;
@@ -57,7 +78,7 @@ main {
   white-space: nowrap;
 }
 
-.zoom-container {
+.zoom_container {
   height: 100vh;
   overflow: hidden;
   position: relative;
@@ -65,7 +86,7 @@ main {
   width: 100vw;
 }
 
-.zoom-item {
+.zoom_item {
   position: absolute;
   transform-origin: center center;
 
@@ -159,7 +180,7 @@ main {
     width: 6.1vw;
   }
 
-  &:not(.heading) {
+  &:not(.main_heading) {
     max-height: 300px;
     max-width: 300px;
   }
