--- a/lee/css/style.css
+++ b/lee/css/style.css
@@ -1,5 +1,3 @@
-
-
 body {
   background-color: #0D031C;
   color: var(--color-white);
@@ -23,7 +21,7 @@ body {
 
 
 @function pxToRem($pixel) {
-  @return $pixel / 16 + rem;
+  @return $pixel / 16+rem;
 }
 
 :root {
@@ -46,6 +44,8 @@ main {
 .main_visual {
   position: relative;
   width: 100%;
+  overflow-x: hidden;
+  padding-top: 100px;
 }
 
 .text_reveal_section {
@@ -62,6 +62,14 @@ main {
   text-align: center;
   width: 60%;
   line-height: 1.5;
+  color: rgba(253, 184, 95, 0.2);
+  background: linear-gradient(to right,
+      #fff,
+      #000 no-repeat);
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-size: 0%;
+  transition: background-size cubic-bezier(0.1, 0.5, 0.5, 1) 0.5s;
 }
 
 .main_heading {
@@ -83,7 +91,7 @@ main {
   overflow: hidden;
   position: relative;
   perspective: 100svh;
-  width: 100vw;
+  width: 100%;
 }
 
 .zoom_item {
@@ -191,15 +199,14 @@ main {
 }
 
 
-.container {
-}
+.container {}
 
 
 
 
 
 
- .tit_eng {
+.tit_eng {
   color: var(--maincolor-main-1000, #bfa473);
   text-align: left;
   font-family: var(--1920-56-font-family, "Assistant-Bold", sans-serif);
@@ -211,26 +218,28 @@ main {
   align-self: stretch;
   display: flex;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
   margin: 0;
-  right: 80px;}
+  right: 80px;
+}
 
 
 .sw_img {
   display: flex;
-  flex-wrap: wrap;      
-  gap: 95px;          
-  justify-content: center; } 
+  flex-wrap: wrap;
+  gap: 95px;
+  justify-content: center;
+}
 
 .sw_img img {
-  width: 100%;       
-  max-width: 400px; 
-  min-width: 300px; 
+  width: 100%;
+  max-width: 400px;
+  min-width: 300px;
   height: auto;
   border-radius: 18px;
   transition: transform 0.6s ease, box-shadow 0.6s ease;
   border-radius: 16px;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .sw_img img:hover {
@@ -238,14 +247,15 @@ main {
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3);
 }
 
-.signature-works p{
-  font-size: 24px; 
-  text-align: center; 
-  color:#ffffff;
-  margin-bottom: 40px;   /* 제목과 이미지 사이 여백 */
-} 
+.signature-works p {
+  font-size: 24px;
+  text-align: center;
+  color: #ffffff;
+  margin-bottom: 40px;
+  /* 제목과 이미지 사이 여백 */
+}
 
-.on-alr{
+section h2 {
   color: var(--maincolor-main-1000, #bfa473);
   text-align: left;
   font-family: var(--1920-56-font-family, "Assistant-Bold", sans-serif);
@@ -259,150 +269,100 @@ main {
   align-items: center;
   justify-content: flex-start;
   margin: 0;
-  margin-top: 200px; 
-  margin-bottom: 40px; 
+  margin-top: 200px;
+  margin-bottom: 40px;
   margin-left: 210px;
 }
 
 .button-group {
   display: flex;
-  flex-wrap:nowrap; 
-  gap: 20px; /* 버튼 간 간격 */
+  flex-wrap: nowrap;
+  gap: 20px;
+  /* 버튼 간 간격 */
   margin-left: 210px;
   margin-bottom: 40px;
 }
 
-
-
-.all {
-  padding: 8px 30px;  /* 위아래 8px, 좌우 40px */
+.button-group button {
+  padding: 8px 30px;
   font-size: 24px;
-  font-weight: 700; /* 폰트굵기 */
+  color: #fff;
+  border-radius: 32px;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  transition: all 0.5s ease;
+  background: transparent;
+}
+
+.button-group button:hover {
+  transform: translateY(-4px);
+  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.5), -6px -6px 12px rgba(255, 255, 255, 0.15);
+  background: linear-gradient(145deg, #c5a87f76, #a8855588);
+}
+
+
+
+
+.Filter {
+  margin-left: auto;
+  /* 오른쪽 끝 배치 */
+  margin-right: 200px;
+  /* 오른쪽 끝에서 안쪽간격 */
+  padding: 8px 30px;
+  /* 위아래 8px, 좌우 40px */
+  font-size: 24px;
+  font-weight: 700;
+  /* 폰트굵기 */
   color: #000000;
   background: linear-gradient(150deg, #ffffff, #ffffff);
   border-radius: 18px;
-  cursor:pointer; /* 마우스 올려놨을 때 손가락버튼바낌 */
+  cursor: pointer;
+  /* 마우스 올려놨을 때 손가락버튼바낌 */
   transition: all 0.5s ease;
   text-align: center;
   border: 1px solid #ccc;
 }
 
-.alr {
-  padding: 8px 30px;  /* 위아래 8px, 좌우 40px */
-  font-size: 24px;
-  font-weight: 700; /* 폰트굵기 */
-  color: #000000;
-  background: linear-gradient(150deg, #ffffff, #ffffff);
-  border-radius: 18px;
-  cursor:pointer; /* 마우스 올려놨을 때 손가락버튼바낌 */
-  transition: all 0.5s ease;
-  text-align: center;
-    border: 1px solid #ccc;
-}
-
-.fin {
-  padding: 8px 30px;  /* 위아래 8px, 좌우 40px */
-  font-size: 24px;
-  font-weight: 700; /* 폰트굵기 */
-  color: #000000;
-  background: linear-gradient(150deg, #ffffff, #ffffff);
-  border-radius: 18px;
-  cursor:pointer; /* 마우스 올려놨을 때 손가락버튼바낌 */
-  transition: all 0.5s ease;
-  text-align: center;
-    border: 1px solid #ccc;
-}
-
-.all:hover {
+.Filter:hover {
   transform: translateY(-4px);
-  box-shadow: 6px 6px 12px rgba(0,0,0,0.5), -6px -6px 12px rgba(255,255,255,0.15);
-  background: linear-gradient(145deg, #c5a87f, #a88555);
-}
-
-.alr:hover {
-  transform: translateY(-4px);
-  box-shadow: 6px 6px 12px rgba(0,0,0,0.5), -6px -6px 12px rgba(255,255,255,0.15);
-  background: linear-gradient(145deg, #c5a87f, #a88555);
-}
-
-.fin:hover {
-  transform: translateY(-4px);
-  box-shadow: 6px 6px 12px rgba(0,0,0,0.5), -6px -6px 12px rgba(255,255,255,0.15);
+  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.5), -6px -6px 12px rgba(255, 255, 255, 0.15);
   background: linear-gradient(145deg, #c5a87f, #a88555);
 }
 
 
-
-.Filter{  
-  margin-left: auto; /* 오른쪽 끝 배치 */
-  margin-right: 200px; /* 오른쪽 끝에서 안쪽간격 */
-  padding: 8px 30px;  /* 위아래 8px, 좌우 40px */
-  font-size: 24px;
-  font-weight: 700; /* 폰트굵기 */
-  color: #000000;
-  background: linear-gradient(150deg, #ffffff, #ffffff);
-  border-radius: 18px;
-  cursor: pointer; /* 마우스 올려놨을 때 손가락버튼바낌 */
-  transition: all 0.5s ease;
-  text-align: center;
-  border: 1px solid #ccc;}
-
-  .Filter:hover {
-  transform: translateY(-4px);
-  box-shadow: 6px 6px 12px rgba(0,0,0,0.5), -6px -6px 12px rgba(255,255,255,0.15);
-  background: linear-gradient(145deg, #c5a87f, #a88555);
-}
-
-
-.poster-section1 {
+ul.poster-list {
   display: flex;
-  justify-content: space-between;/* 5개 박스 사이 자동 간격 */
-  margin: 0 200px; /* 양쪽 200px 여백 */
-  margin-bottom: 120px;
-  flex-wrap: nowrap;  /* 한 줄로 유지 */
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 50px;
+  /* 5개 박스 사이 자동 간격 */
+  margin: 0 200px;
+  /* 양쪽 200px 여백 */
+  /* 한 줄로 유지 */
 }
-.poster-section1-titel{
+
+ul.poster-list li {
+  width: 268px;
+}
+
+.poster-title {
   color: #948484;
   font-weight: 600;
-  font-size: 25px; 
-  margin-top: 23px; /* 위쪽 간격 */
-  text-align: center; 
+  font-size: 25px;
+  margin-top: 23px;
+  /* 위쪽 간격 */
+  text-align: center;
 }
-.poster-box1 img {
-  width: 269px;
-  height: 380px;
+
+.poster-list img {
+  width: 268px;
+  height: 366px;
   border-radius: 5px;
-  filter: brightness(0.9); /* 이미지어둡게 조절 */
-  cursor:pointer;
+  filter: brightness(0.9);
+  /* 이미지어둡게 조절 */
+  cursor: pointer;
 }
-.poster-box2 img {
-  width: 269px;
-  height: 380px;
-  border-radius: 5px;
-  filter: brightness(0.9); /* 이미지어둡게 조절 */
-  cursor:pointer;
-}
-.poster-box3 img {
-  width: 269px;
-  height: 380px;
-  border-radius: 5px;
-  filter: brightness(0.9); /* 이미지어둡게 조절 */
-  cursor:pointer;
-}
-.poster-box4 img {
-  width: 269px;
-  height: 380px;
-  border-radius: 5px;
-  filter: brightness(0.9); /* 이미지어둡게 조절 */
-  cursor:pointer;
-}
-.poster-box5 img {
-  width: 269px;
-  height: 380px;
-  border-radius: 5px;
-  filter: brightness(0.9); /* 이미지어둡게 조절 */
-  cursor:pointer;
-}
+
 
 
 /* Pagination + Search Container */
@@ -505,7 +465,27 @@ main {
 }
 
 
+.last-section {
+  width: 100%;
+  height: 150vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
+.last-section img {
+  width: 100%;
+}
+
+.last-section span {
+  color: #FFF;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: normal;
+  display: block;
+  text-align: center;
+  margin-top: 35px;
+}
 
 /* -------------------------------
    포스터 3D 인터랙티브 효과 망한거 복구해
