지금까지한 코드 올리기

--- a/back/css/MainBack_media.css
+++ b/back/css/MainBack_media.css
@@ -1,13 +1,104 @@
 @charset "UTF-8";
 
-@media screen and (max-width:1407px) {
-    .circlebody {
-        margin-top: 75px;
+@media screen and (max-width:1519x) {}
+
+@media screen and (max-width:1320px) {
+    .comingsoon .inner img {
+        width: 95%;
     }
 }
 
-@media screen and (max-width:570px) {
-    .circlebody {
-        margin-top: 10px;
+@media screen and (max-width:1023px) {
+    .comingsoon .inner {
+        width: 865px;
+    }
+    
+    .comingsoon .inner .top {
+        width: 398px;
+    }
+
+    .comingsoon .inner .top h2 {
+        font-size: 40px;
+    }
+
+    .comingsoon .inner img {
+        width: 725px;
+        border-radius: 0 200px 0 0;
+    }
+
+    .comingsoon .inner .txt {
+        font-size: 30px;
+    }
+
+    .comingsoon .inner h3 {
+        bottom: 120px;
+    }
+
+    .comingsoon .inner p {
+        bottom: 24px;
+    }
+
+}
+
+@media screen and (max-width:860px) {}
+
+@media screen and (max-width:746px) {
+    .comingsoon .inner {
+        width: 90%;
+    }
+    .comingsoon .inner img {
+        width: 90%;
+        border-radius: 0 200px 0 0;
+    }
+
+    .comingsoon .inner .txt {
+        font-size: 30px;
+    }
+
+    .comingsoon .inner h3 {
+        bottom: 70px;
+    }
+
+    .comingsoon .inner p {
+        bottom: 24px;
+    }
+}
+
+@media screen and (max-width:570px) {}
+
+@media screen and (max-width:439px) {
+    .comingsoon .inner {
+        width: 380px;
+    }
+    .comingsoon .inner .top {
+        width: 226px;
+    }
+    .comingsoon .inner .top h2 {
+        font-size: 30px;
+    }
+    .comingsoon .inner .top button {
+        background: url(../img/arrow-up-right.png) center/cover;
+        width: 26px;
+        height: 26px;
+    }
+    .comingsoon .inner .top button span {
+        display: none;
+    }
+    .comingsoon .inner img {
+        width: 380px;
+        height: 220px;
+        border-radius: 0 50px 0 0;
+    }
+
+    .comingsoon .inner .txt {
+        font-size: 20px;
+    }
+
+    .comingsoon .inner h3 {
+        bottom: 40px;
+    }
+
+    .comingsoon .inner p {
+        bottom: 24px;
     }
 }
